# linglong-scout

./: .dockerignore  .gitignore  .linglong-scout.example.yaml  .scout.example.yml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/rules/: api-design.md  code-style.md  docs-sync.md  privacy.md  security.md  testing.md
.github/workflows/: ci.yml  deploy.yml
deploy/: .env.example  .scout.yml.example  docker-deploy.sh  linglong-mcp.service  linglong-scout-mcp.service  nginx.conf
docs/: README.md  doc-map.yaml
docs/design/: 00-overview.md  01-data-sources.md  02-agent-pipeline.md  03-dedup.md  04-cache.md  05-prompt.md  06-mcp.md  07-mcp-tools.md
docs/ingest/: README.md
docs/ingest/design/: 00-overview.md  03-dedup.md  04-cache.md  05-prompt.md
journal/: 2026-05-22.md  2026-05-23.md  2026-05-25.md  2026-05-26.md  2026-05-28.md  2026-05-29.md  README.md
scripts/: doc-check.py  journal-check.py  privacy-check.py  session-context.py
src/linglong/: __init__.py  __main__.py  cli.py  config.py
src/linglong/mcp/: __init__.py  __main__.py  _auth.py  server.py  token.py  tools.py
src/linglong/scout/: __init__.py  (+10 more)
src/linglong_scout/: __init__.py  __main__.py  cli.py  config.py
tests/: test_cli.py  test_consistency.py
tests/ingest/: test_agent.py  test_brief_history.py  test_feedback.py  test_package.py
tests/mcp/: test_auth.py  test_mcp_server.py  test_token.py
tests/scout/: test_agent.py  test_brief_history.py  test_collect.py  test_feedback.py  test_package.py  test_raw_store.py  test_scheduler.py
(+15 files in other folders)
