[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "linglong-scout"
dynamic = ["version"]
description = "Linglong Scout — information collection agent for AI workflows"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "mcp[cli]>=1.0",
    "httpx>=0.25",
    "feedparser>=6.0",
    "schedule>=1.2",
    "starlette",
    "uvicorn",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
linglong-scout = "linglong.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linglong"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
